bq-training-terraform-assignment/modules/module_aws_vpc/internet_gateway.tf
resource "aws_internet_gateway" "gateway-01" {
  vpc_id = aws_vpc.VPC1-TERRAFORM.id
  tags = {
    Name = "TERRAFORM-INTERNET-GATEWAY"
  }
}
