bq-training-terraform-assignment/modules/module_aws_vpc/vpc.tf
resource "aws_vpc" "VPC1-TERRAFORM" {
  cidr_block = var.vpc_cidr
    tags = {
            Name = var.name
    }
}
